# ebbiforge

./: .gitignore  BENCHMARKS.md  CONTRIBUTING.md  LICENSE  README.md  groundhog_day_report.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  new_data_feed.yml
.github/workflows/: ci.yml  ebbiforge-publish.yml
demo/: docker-compose.yml
ebbiforge/: __init__.py  __main__.py  cli.py
ebbiforge-core/: Cargo.toml
ebbiforge-core/src/: lib.rs
ebbiforge-core/src/core/: config.rs  graph.rs  middleware.rs  runner.rs  security.rs  tools.rs
ebbiforge-core/src/evolution/: population.rs  sandbox.rs  synthesizer.rs
ebbiforge-core/src/intel/: pollination.rs  pruning.rs  reviewer.rs  safety.rs
ebbiforge-core/src/memory/: consolidation.rs  disk.rs  episode.rs  hippocampus.rs  kanerva.rs  lsh.rs  mod.rs
ebbiforge-core/src/swarm/: criticality_test.rs  evolution_test.rs  grid.rs  lod.rs  master_pipeline.rs  mmap_pool.rs  mod.rs  pheromone.rs  pollination.rs  py_api.rs  scale_test.rs  swarm_engine.rs  tensor_engine.rs  watcher.rs
ebbiforge-core/src/worldmodel/: mod.rs
entroly/: pyproject.toml  tuning_config.json
entroly-core/: Cargo.toml
entroly-core/src/: depgraph.rs  embeddings.rs  entropy.rs  fragment.rs  health.rs  lib.rs  prism.rs  skeleton.rs
entroly/bench/: autotune.py  cases.json  evaluate.py  tuning_config.json
entroly/entroly/: auto_index.py  autotune.py  cli.py  proxy.py  proxy_config.py  proxy_transform.py  server.py
entroly/entroly-core/src/: entropy.rs  fragment.rs  knapsack_sds.rs
entroly/tests/: test_apa.py
examples/: 00_quickstart.py  02_evolution.py  07_hippocampus.py  memory_calibration.py  verify_all_benchmarks.py
hippocampus-sharp-memory/: README.md  pyproject.toml
hippocampus-sharp-memory/examples/: quickstart.py  recall_before_llm.py
hippocampus-sharp-memory/hippocampus_sharp_memory/: __init__.py
server/: command_center_api.py  commander.py  llm_gateway.py  main.py  orchestrator.py  planner.py  swarm_brain.py
test_first_time/: hello_swarm.py
web/app/command-center/: page.tsx
